--- a/repo/plugins-miscel/trunk/update-component-role-maven-plugin/pom.xml
+++ b/repo/plugins-miscel/trunk/update-component-role-maven-plugin/pom.xml
@@ -2,7 +2,7 @@
     <parent>
         <groupId>uk.ac.ebi.intact.plugins</groupId>
         <artifactId>plugins-miscel</artifactId>
-        <version>1.6.0</version>
+        <version>1.6.1-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -10,7 +10,7 @@
     <groupId>uk.ac.ebi.intact.plugins</groupId>
     <artifactId>update-component-role-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.6.0</version>
+    <version>1.6.1-SNAPSHOT</version>
 
     <name>Plugin - update-component-role-maven-plugin</name>
     <description>Plugin for updating the role of the component when migrating from intact-core 1.5.0 to 1.6.0.
@@ -22,9 +22,9 @@
     </properties>
 
     <scm>
-        <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/plugins-miscel/tags/plugins-miscel-1.6.0/update-component-role-maven-plugin</connection>
-        <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/plugins-miscel/tags/plugins-miscel-1.6.0/update-component-role-maven-plugin</developerConnection>
-        <url>http://svn.sourceforge.net/viewcvs.cgi/intact/repo/plugins-miscel/tags/plugins-miscel-1.6.0/update-component-role-maven-plugin</url>
+        <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/plugins-miscel/trunk/update-component-role-maven-plugin</connection>
+        <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/plugins-miscel/trunk/update-component-role-maven-plugin</developerConnection>
+        <url>http://svn.sourceforge.net/viewcvs.cgi/intact/repo/plugins-miscel/trunk/update-component-role-maven-plugin/</url>
     </scm>
 
 </project>
