--- a/repo/dbupdate/trunk/pom.xml
+++ b/repo/dbupdate/trunk/pom.xml
@@ -20,7 +20,7 @@
     <properties>
         <currentVersion>${version}</currentVersion>
         <bridges.version>2.0.2</bridges.version>
-        <core.version>1.8.2</core.version>
+        <core.version>1.9.0-SNAPSHOT</core.version>
     </properties>
 
     <scm>
