--- a/repo/service/trunk/imex/intact-imex-exporter/pom.xml
+++ b/repo/service/trunk/imex/intact-imex-exporter/pom.xml
@@ -18,19 +18,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>uk.ac.ebi.intact</groupId>
-            <artifactId>intact-core</artifactId>
-            <version>1.6.2-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
             <artifactId>intact-psixml-exchange</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0</version>
         </dependency>
         <dependency>
             <groupId>psidev.psi.mi</groupId>
             <artifactId>psimi-xslt</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.5.0</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
