--- a/repo/service/trunk/imex/intact-imex-id-assigner/pom.xml
+++ b/repo/service/trunk/imex/intact-imex-id-assigner/pom.xml
@@ -32,25 +32,13 @@
                 <filtering>true</filtering>
             </resource>
         </resources>
-
-        <plugins>
-            <!--
-            dbtest plugin, it will automatically fetch an h2 db (using the artifact h2db-with-cv
-            from the dependencies secion) and will fill the db with the psi xml (v1) files in src/test/psi1)
-            -->
-            <plugin>
-                <groupId>uk.ac.ebi.intact.plugins</groupId>
-                <artifactId>dbtest-maven-plugin</artifactId>
-                <version>1.0.3</version>
-            </plugin>
-        </plugins>
     </build>
 
     <dependencies>
         <dependency>
-            <groupId>psidev.psi.mi.stylesheets</groupId>
+            <groupId>psidev.psi.mi</groupId>
             <artifactId>psimi-xslt</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.5.0</version>
         </dependency>
 
         <dependency>
@@ -60,23 +48,10 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- h2 database used for testing, with the cvs preloaded -->
         <dependency>
-            <groupId>uk.ac.ebi.intact.templates</groupId>
-            <artifactId>h2db-with-cv</artifactId>
-            <version>1.3-20070410-test</version>
-            <type>zip</type>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>uk.ac.ebi.intact</groupId>
-            <artifactId>intact-core</artifactId>
-            <version>1.5.0</version>
-        </dependency>
-        <dependency>
-            <groupId>uk.ac.ebi.intact.util</groupId>
+            <groupId>uk.ac.ebi.intact.dataexchange.psimi.legacy</groupId>
             <artifactId>data-conversion</artifactId>
-            <version>1.5.2</version>
+            <version>2.0.0</version>
         </dependency>
         <!--Web service deps-->
         <dependency>
