--- a/repo/service/trunk/commons/confidence-score/pom.xml
+++ b/repo/service/trunk/commons/confidence-score/pom.xml
@@ -52,22 +52,10 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.bridges</groupId>
             <artifactId>intact-blast</artifactId>
-            <version>2.0.2-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>uk.ac.ebi.intact.bridges</groupId>
-            <artifactId>intact-uniprot</artifactId>
-            <version>2.0.1-SNAPSHOT</version>
+            <version>2.0.2</version>
         </dependency>
 
         <!-- for PSI-MI TAB enrichment-->
-        <dependency>
-            <groupId>psidev.psi.mi</groupId>
-            <artifactId>psimitab</artifactId>
-            <version>1.5.0-SNAPSHOT</version>
-        </dependency>
-
         <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
             <artifactId>intact-psimitab</artifactId>
@@ -75,21 +63,9 @@
         </dependency>
 
         <dependency>
-            <groupId>psidev.psi.mi</groupId>
-            <artifactId>psi25-xml</artifactId>
-            <version>1.5.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
             <groupId>net.sourceforge.opennlp</groupId>
             <artifactId>maxent</artifactId>
             <version>2.4.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.oracle</groupId>
-            <artifactId>oracle-thin</artifactId>
-            <version>9.2.0</version>
         </dependency>
 
         <dependency>
@@ -103,15 +79,9 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.service.search.binary</groupId>
             <artifactId>wsclient</artifactId>
-            <version>1.6.0-beta-1</version>
+            <version>1.6.0-rc2-SNAPSHOT</version>
         </dependency>
 
-        <dependency>
-            <groupId>uk.ac.ebi.intact.core</groupId>
-            <artifactId>intact-core</artifactId>
-            <version>1.8.1-SNAPSHOT</version>          <!--1.7.1 -->
-        </dependency>       
-        
         <!-- for merge with lucene-->
         <dependency>
             <groupId>org.apache.lucene</groupId>
