--- a/repo/service/trunk/commons/confidence-score/pom.xml
+++ b/repo/service/trunk/commons/confidence-score/pom.xml
@@ -88,6 +88,12 @@
             <artifactId>intact-uniprot</artifactId>
             <version>2.0.2</version>
         </dependency>
+
+        <dependency>    <!-- without this dependency no connection to db -->
+            <groupId>com.oracle</groupId>
+            <artifactId>oracle-thin</artifactId>
+            <version>9.2.0</version>
+        </dependency>
         <!-- end-->
 
 
