--- a/repo/dbupdate/trunk/pom.xml
+++ b/repo/dbupdate/trunk/pom.xml
@@ -19,7 +19,7 @@
 
     <properties>
         <currentVersion>${version}</currentVersion>
-        <bridges.version>2.0.2</bridges.version>
+        <bridges.version>2.0.3-SNAPSHOT</bridges.version>
         <core.version>1.9.0-SNAPSHOT</core.version>
     </properties>
 
