log4j level changed

--- a/repo/data-exchange/trunk/psimi/psixml/intact-psixml-exchange/src/test/resources/log4j.properties
+++ b/repo/data-exchange/trunk/psimi/psixml/intact-psixml-exchange/src/test/resources/log4j.properties
@@ -1,25 +1,28 @@
-log4j.rootCategory=INFO, A
+log4j.rootCategory=WARN, A
 
 # intact-core
-log4j.category.uk.ac.ebi.intact=DEBUG
+log4j.category.uk.ac.ebi.intact=WARN
 log4j.category.uk.ac.ebi.intact.model.util.XrefUtils=ERROR
-log4j.category.uk.ac.ebi.intact.persistence.util=INFO
-log4j.category.uk.ac.ebi.intact.persistence.dao=INFO
+log4j.category.uk.ac.ebi.intact.persistence.util=WARN
+log4j.category.uk.ac.ebi.intact.persistence.dao=WARN
 
 
-log4j.category.uk.ac.ebi.intact.model=INFO
-log4j.category.uk.ac.ebi.intact.config=INFO
-log4j.category.uk.ac.ebi.intact.context=INFO
-log4j.category.uk.ac.ebi.intact.annotation=INFO
+log4j.category.uk.ac.ebi.intact.model=WARN
+log4j.category.uk.ac.ebi.intact.config=WARN
+log4j.category.uk.ac.ebi.intact.context=WARN
+log4j.category.uk.ac.ebi.intact.annotation=WARN
 
-log4j.category.uk.ac.ebi.intact.core.persister=DEBUG
+log4j.category.uk.ac.ebi.intact.core.persister=WARN
+
+log4j.category.uk.ac.ebi.intact.dataexchange.psimi.xml.converter=ERROR
+log4j.category.uk.ac.ebi.intact.dataexchange.psimi.xml.converter.shared=ERROR
 
 # data exchange
-log4j.category.uk.ac.ebi.intact.dataexchange=DEBUG
-log4j.category.uk.ac.ebi.intact.dataexchange.enricher=INFO
+log4j.category.uk.ac.ebi.intact.dataexchange=WARN
+log4j.category.uk.ac.ebi.intact.dataexchange.enricher=WARN
 
 
-log4j.category.uk.ac.ebi.intact.uniprot=INFO
+log4j.category.uk.ac.ebi.intact.uniprot=WARN
 
 
 # related
