log4j debug level changed

--- a/repo/data-exchange/trunk/psimi/psixml/intact-psixml-converters/src/test/resources/log4j.properties
+++ b/repo/data-exchange/trunk/psimi/psixml/intact-psixml-converters/src/test/resources/log4j.properties
@@ -1,22 +1,29 @@
 
 log4j.rootCategory=WARN, A
 
-log4j.category.uk.ac.ebi.intact=DEBUG
-log4j.category.uk.ac.ebi.intact.persistence.util=INFO
-log4j.category.uk.ac.ebi.intact.persistence.dao.IntactTransaction=INFO
-log4j.category.uk.ac.ebi.intact.model.IntactIdGenerator=INFO
-log4j.category.uk.ac.ebi.intact.model.event.IntactObjectEventListener=INFO
-log4j.category.uk.ac.ebi.intact.config.impl.AbstractHibernateDataConfig=INFO
-log4j.category.uk.ac.ebi.intact.context.DataContext=INFO
-log4j.category.uk.ac.ebi.intact.annotation=INFO
+log4j.category.uk.ac.ebi.intact=WARN
+log4j.category.uk.ac.ebi.intact.persistence.util=WARN
+log4j.category.uk.ac.ebi.intact.persistence.dao.IntactTransaction=WARN
+log4j.category.uk.ac.ebi.intact.model.IntactIdGenerator=WARN
+log4j.category.uk.ac.ebi.intact.model.event.IntactObjectEventListener=WARN
+log4j.category.uk.ac.ebi.intact.config.impl.AbstractHibernateDataConfig=WARN
+log4j.category.uk.ac.ebi.intact.context.DataContext=WARN
+log4j.category.uk.ac.ebi.intact.annotation=WARN
+log4j.category.uk.ac.ebi.intact.dataexchange.psimi.xml.converter=ERROR
+log4j.category.uk.ac.ebi.intact.dataexchange.psimi.xml.converter.shared=ERROR
 
-log4j.category.uk.ac.ebi.intact.util.controlledVocab.PSILoader=INFO
 
-log4j.category.org.apache=INFO
+log4j.category.psidev.psi.mi=ERROR
+
+log4j.category.uk.ac.ebi.intact.util.controlledVocab.PSILoader=WARN
+
+log4j.category.org.apache=WARN
 
 log4j.category.org.hibernate=ERROR
 
 log4j.category.org.hibernate.cfg=WARN
+
+
 
 log4j.category.org.hibernate.impl=INFO
 log4j.category.org.hibernate.loader=WARN
