- Debug level by default to INFO - Ensuring that only CvUpdaterTest uses the database (by removing the IntactBasicTestCase superclass in CvExporterTest) - Using stable OBO file revision in CvObjectOntologyBuilderTest

--- a/repo/data-exchange/trunk/intact-cvutils/src/test/resources/log4j.properties
+++ b/repo/data-exchange/trunk/intact-cvutils/src/test/resources/log4j.properties
@@ -1,6 +1,6 @@
 log4j.rootCategory=INFO, A
 
-log4j.category.uk.ac.ebi.intact.dataexchange.cvutils=DEBUG
+log4j.category.uk.ac.ebi.intact.dataexchange.cvutils=INFO
 log4j.category.uk.ac.ebi.intact.dataexchange.cvutils.PSILoader=INFO
 
 # intact-core
