--- a/repo/site/trunk/intact-kickstart/pom.xml
+++ b/repo/site/trunk/intact-kickstart/pom.xml
@@ -18,6 +18,12 @@
     <dependencies>
         <!-- IntAct dependencies -->
         <dependency>
+            <groupId>uk.ac.ebi.intact.core</groupId>
+            <artifactId>intact-core</artifactId>
+            <version>1.8.4</version>
+        </dependency>
+
+        <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
             <artifactId>intact-psixml-exchange</artifactId>
             <version>2.0.0</version>
