--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/pom.xml
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/pom.xml
@@ -22,7 +22,23 @@
     <properties>
         <jetty.port>9090</jetty.port>
         <db.alias>nodb</db.alias>
+
+        <binarysearch.defaultindex>/ebi/sp/pro6/intact/public-tomcat/psimitab-index/current</binarysearch.defaultindex>
     </properties>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/webapp-filtered</directory>
+                <filtering>true</filtering>
+                <targetPath>../../src/main/webapp</targetPath>
+            </resource>
+        </resources>
+    </build>
       
     <dependencies>
         <dependency>
