--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Search.properties
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Search.properties
@@ -18,4 +18,4 @@ search.source.name=local
 
 # Here you can specify the path to the local index files
 # which you will need if you are using the LocalIndexDastService
-search.source.local.index.path=/ebi/sp/pro6/intact/public-tomcat/psimitab-index/current
+search.source.local.index.path=${binarysearch.defaultindex}
