--- a/repo/service/trunk/search/binary/binary-search-webapp/pom.xml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/pom.xml
@@ -43,11 +43,12 @@
         </resources>
 
         <plugins>
-            <plugin>
-                <groupId>com.sun.tools.xjc.maven2</groupId>
-                <artifactId>maven-jaxb-plugin</artifactId>
+              <plugin>
+                <groupId>org.jvnet.jaxb2.maven2</groupId>
+                    <artifactId>maven-jaxb2-plugin</artifactId>
                 <configuration>
-                    <generatePackage>uk.ac.ebi.intact.binarysearch.webapp.generated</generatePackage>
+                    <schemaDirectory>${project.basedir}/src/main/resources/META-INF</schemaDirectory>
+                    <bindingDirectory>${project.basedir}/src/main/resources/META-INF</bindingDirectory>
                     <extension>true</extension>
                 </configuration>
                 <executions>
@@ -57,20 +58,9 @@
                         </goals>
                     </execution>
                 </executions>
-
-                <dependencies>
-                    <dependency>
-                        <groupId>com.sun.xml.bind</groupId>
-                        <artifactId>jaxb-impl</artifactId>
-                        <version>2.1</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>javax.xml.bind</groupId>
-                        <artifactId>jaxb-api</artifactId>
-                        <version>2.1</version>
-                    </dependency>
-                </dependencies>
             </plugin>
+
+
         </plugins>
     </build>
 
@@ -191,6 +181,12 @@
         </dependency>
 
         <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.myfaces.tomahawk</groupId>
             <artifactId>tomahawk-sandbox</artifactId>
             <version>1.1.7-SNAPSHOT</version>
@@ -253,7 +249,7 @@
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
-            <version>2.1</version>
+            <version>2.1.3</version>
         </dependency>
 
         <dependency>
