--- a/repo/core/branches/core-1.8.x/pom.xml
+++ b/repo/core/branches/core-1.8.x/pom.xml
@@ -11,16 +11,16 @@
     <groupId>uk.ac.ebi.intact.core</groupId>
     <artifactId>core</artifactId>
     <packaging>pom</packaging>
-    <version>1.8.5-SNAPSHOT</version>
+    <version>1.8.5</version>
 
     <name>IntAct Core</name>
     <description>Core Master POM</description>
     <url>http://www.ebi.ac.uk/~intact/devsite/core</url>
 
     <scm>
-        <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/core/branches/core-1.8.x</connection>
-        <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/core/branches/core-1.8.x</developerConnection>
-        <url>http://svn.sourceforge.net/viewcvs.cgi/intact/repo/core/branches/core-1.8.x</url>
+        <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/core/tags/core-1.8.5</connection>
+        <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/core/tags/core-1.8.5</developerConnection>
+        <url>http://svn.sourceforge.net/viewcvs.cgi/intact/repo/core/tags/core-1.8.5</url>
     </scm>
 
     <modules>
