--- a/repo/bridges/trunk/pom.xml
+++ b/repo/bridges/trunk/pom.xml
@@ -33,6 +33,7 @@
        <module>intact-citexplore</module>
        <module>intact-taxonomy</module>
        <module>intact-uniprot</module>
+       <module>intact-unisave</module>
        <module>blast-mapping-parser</module>
        <module>intact-blast</module>
        <module>intact-go</module>
