[IBR-35] Cannot parse fasta sequence that spans over more than 2 lines (UniSave doesn't return stardard FASTA) [IBR-36] Add method that collects all subsequent sequence update following a given one (for a specific entry)

--- a/repo/bridges/trunk/intact-unisave/pom.xml
+++ b/repo/bridges/trunk/intact-unisave/pom.xml
@@ -75,6 +75,21 @@
             <groupId>xfire</groupId>
             <artifactId>xfire-jsr181-api</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.3</version>
+        </dependency>
     </dependencies>
 
 </project>
