--- a/repo/service/trunk/search/binary/binary-webservice/wsclient/pom.xml
+++ b/repo/service/trunk/search/binary/binary-webservice/wsclient/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>uk.ac.ebi.intact.maven</groupId>
         <artifactId>intact-master</artifactId>
-        <version>10</version>
+        <version>13</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -12,7 +12,7 @@
     <groupId>uk.ac.ebi.intact.service.search.binary</groupId>
     <artifactId>wsclient</artifactId>
     <packaging>jar</packaging>
-    <version>1.6.0-rc2-SNAPSHOT</version>
+    <version>1.6.0-rc3-SNAPSHOT</version>
 
     <name>IntAct Services :: Search :: Binary :: Web Service :: Client</name>
     <description>A web service interface to retrieve data from intact</description>
@@ -57,7 +57,7 @@
             <plugin>
                 <groupId>org.codehaus.cargo</groupId>
                 <artifactId>cargo-maven2-plugin</artifactId>
-
+                <version>0.3.1</version>
                 <configuration>
                     <wait>false</wait>
                     <container>
@@ -109,12 +109,46 @@
 
     </build>
 
+    <profiles>
+        <profile>
+            <id>default-tools.jar</id>
+            <activation>
+                <property>
+                    <name>java.vendor</name>
+                    <value>Sun Microsystems Inc.</value>
+                </property>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>sun.jdk</groupId>
+                    <artifactId>tools</artifactId>
+                    <version>1.5.0</version>
+                    <scope>system</scope>
+                    <systemPath>${java.home}/../lib/tools.jar</systemPath>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <activation>
+                <property>
+                    <name>!maven.test.skip</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+
+
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
     <dependencies>
        
         <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
             <artifactId>intact-psimitab</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.1-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>c3p0</groupId>
@@ -217,27 +251,6 @@
         </dependency>
 
     </dependencies>
-
-    <profiles>
-    <profile>
-      <id>default-tools.jar</id>
-      <activation>
-        <property>
-          <name>java.vendor</name>
-          <value>Sun Microsystems Inc.</value>
-       </property>
-     </activation>
-      <dependencies>
-        <dependency>
-          <groupId>sun.jdk</groupId>
-          <artifactId>tools</artifactId>
-          <version>1.5.0</version>
-          <scope>system</scope>
-          <systemPath>${java.home}/../lib/tools.jar</systemPath>
-       </dependency>
-     </dependencies>
-   </profile>
- </profiles>
 
     <pluginRepositories>
         <pluginRepository>
