--- a/repo/bridges/trunk/pom.xml
+++ b/repo/bridges/trunk/pom.xml
@@ -73,6 +73,7 @@
              <groupId>junit</groupId>
              <artifactId>junit</artifactId>
              <version>4.3.1</version>
+             <scope>test</scope>
         </dependency>
     </dependencies>
 
