--- a/repo/service/trunk/search/binary/binary-webservice/pom.xml
+++ b/repo/service/trunk/search/binary/binary-webservice/pom.xml
@@ -49,13 +49,13 @@
         <dependency>
             <groupId>com.sun.xml.ws</groupId>
             <artifactId>jaxws-tools</artifactId>
-            <version>2.1.2</version>
+            <version>2.1.4</version>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>xfire</groupId>
             <artifactId>xfire-jsr181-api</artifactId>
             <version>1.0-M1</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
 
