--- a/repo/service/trunk/search/binary/binary-webservice/ws/pom.xml
+++ b/repo/service/trunk/search/binary/binary-webservice/ws/pom.xml
@@ -18,6 +18,7 @@
     <build>
         <finalName>intact-binary-search-ws-${buildNumber}</finalName>
         <plugins>
+<!--
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -30,12 +31,12 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
 
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>jaxws-maven-plugin</artifactId>
-                <version>1.0-beta-1-EBI-20070310</version>
+                <version>1.10</version>
                 <executions>
                     <execution>
                         <goals>
@@ -47,13 +48,8 @@
                     <sei>uk.ac.ebi.intact.binarysearch.ws.BinarySearch</sei>
                     <verbose>true</verbose>
                 </configuration>
-
+<!--
                 <dependencies>
-                    <dependency>
-                        <groupId>xfire</groupId>
-                        <artifactId>xfire-jsr181-api</artifactId>
-                        <version>1.0-M1</version>
-                    </dependency>
                     <dependency>
                         <groupId>sun.jdk</groupId>
                         <artifactId>tools</artifactId>
@@ -62,7 +58,7 @@
                         <systemPath>${java.home}/../lib/tools.jar</systemPath>
                     </dependency>
                 </dependencies>
-
+-->
             </plugin>
         </plugins>
     </build>
@@ -71,7 +67,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
             <artifactId>intact-psimitab</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0</version>
             <exclusions>
                <exclusion>
                    <groupId>uk.ac.ebi.pride</groupId>
@@ -106,16 +102,6 @@
             <scope>provided</scope>
         </dependency>
 
-        <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.xml.bind</groupId>
-            <artifactId>jaxb-impl</artifactId>
-            <version>2.1.3</version>
-        </dependency>
     </dependencies>
 
 </project>
