[IBR-37] Update if JAXWS dependencies to work with Java6 (jaxws-tools / jaxws-maven-plugin)

--- a/repo/bridges/trunk/coredep/intact-cdb/pom.xml
+++ b/repo/bridges/trunk/coredep/intact-cdb/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
        <groupId>uk.ac.ebi.intact.bridges.coredep</groupId>
@@ -22,16 +23,7 @@
             <version>${pom.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.xml.bind</groupId>
-            <artifactId>jaxb-impl</artifactId>
-            <version>2.1</version>
-        </dependency>
+        <!-- JAX-WS -->
         <dependency>
             <groupId>com.sun.xml.ws</groupId>
             <artifactId>jaxws-tools</artifactId>
@@ -40,6 +32,8 @@
             <groupId>xfire</groupId>
             <artifactId>xfire-jsr181-api</artifactId>
         </dependency>
+
+        <!-- 3rd party -->
         <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
