Only adding tools.jar only for jdk 1.5

--- a/repo/bridges/trunk/intact-citexplore/pom.xml
+++ b/repo/bridges/trunk/intact-citexplore/pom.xml
@@ -31,6 +31,7 @@
         <profile>
             <id>default-tools.jar</id>
             <activation>
+                <jdk>1.5</jdk>
                 <property>
                     <name>java.vendor</name>
                     <value>Sun Microsystems Inc.</value>
