--- a/repo/site/trunk/intact-kickstart/pom.xml
+++ b/repo/site/trunk/intact-kickstart/pom.xml
@@ -16,6 +16,21 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
+
+        <!--To be removed when Dataexchange 2.0.1 is released -->
+         <dependency>
+            <groupId>org.geneontology</groupId>
+            <artifactId>oboedit</artifactId>
+            <version>1.101</version>
+            <scope>runtime</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>uk.ac.ebi</groupId>
+            <artifactId>ols</artifactId>
+            <version>1.14.1</version>
+        </dependency>
+
         <!-- IntAct dependencies -->
         <dependency>
             <groupId>uk.ac.ebi.intact.core</groupId>
@@ -33,14 +48,14 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
             <artifactId>intact-psimitab</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
         </dependency>
 
         <!-- Binary Search Client -->
         <dependency>
             <groupId>uk.ac.ebi.intact.service.search.binary</groupId>
             <artifactId>wsclient</artifactId>
-            <version>1.6.0-rc2-SNAPSHOT</version>
+            <version>1.6.0-rc3-SNAPSHOT</version>
         </dependency>
 
         <!-- It this is not present, eclipse fails to synchronize the maven build
