--- a/repo/bridges/trunk/intact-citexplore/pom.xml
+++ b/repo/bridges/trunk/intact-citexplore/pom.xml
@@ -56,6 +56,16 @@
             <groupId>com.sun.xml.ws</groupId>
             <artifactId>jaxws-tools</artifactId>
         </dependency>
+
+        <!-- 3rd party -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
