--- a/repo/bridges/trunk/intact-go/pom.xml
+++ b/repo/bridges/trunk/intact-go/pom.xml
@@ -21,6 +21,16 @@
             <artifactId>ols</artifactId>
             <version>1.14</version>
         </dependency>
+
+        <!-- 3rd party -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+        </dependency>
     </dependencies>
 
     <!-- EBI repositories -->
