--- a/repo/bridges/trunk/pom.xml
+++ b/repo/bridges/trunk/pom.xml
@@ -117,7 +117,15 @@
                 <artifactId>jaxb-api</artifactId>
                 <version>2.1</version>
             </dependency>
+
+            <!-- 3rd party -->
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>2.4</version>
+            </dependency>
         </dependencies>
+
     </dependencyManagement>
 
     <dependencies>
@@ -162,6 +170,4 @@
             <url>${site.remote.basedir}/bridges</url>
         </site>
     </distributionManagement>
-
-
 </project>
