Added  new IntactUnit().createSchema( true ); to the beginning of some of the tests to make sure that the cv table is empty.

--- a/repo/data-exchange/trunk/intact-cvutils/pom.xml
+++ b/repo/data-exchange/trunk/intact-cvutils/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.core</groupId>
             <artifactId>intact-core</artifactId>
-        </dependency>
+       </dependency>
 
         <dependency>
             <groupId>org.geneontology</groupId>
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>org.geneontology</groupId>
             <artifactId>oboedit</artifactId>
-            <version>beta8</version>
+            <version>1.101</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
