- Added configurable Google Analytics setup

--- a/repo/site/trunk/intact-site/pom.xml
+++ b/repo/site/trunk/intact-site/pom.xml
@@ -33,6 +33,8 @@
         <jetty.context>site</jetty.context>
 
         <appRoot>/intact</appRoot>
+
+        <google.analytics.account>UA-672146</google.analytics.account>
     </properties>
 
     <build>
