Updated bridges to 2.0.5 and dbupdate dependency

--- a/repo/service/trunk/editor/editor-app/src/main/resources/uk/ac/ebi/intact/application/editor/BuildInfo.properties
+++ b/repo/service/trunk/editor/editor-app/src/main/resources/uk/ac/ebi/intact/application/editor/BuildInfo.properties
@@ -1,4 +1,5 @@
 build.version=${version}
 core.version=${core.version}
+bridges.version=${bridges.version}
 buildNumber=${buildNumber}
 builtBy=${user}
