--- a/repo/service/trunk/editor/editor-app/pom.xml
+++ b/repo/service/trunk/editor/editor-app/pom.xml
@@ -24,6 +24,8 @@
         <maven.test.skip>true</maven.test.skip>
         <db.connectionProviderClass>uk.ac.ebi.intact.application.editor.hibernate.EditorConnectionProvider
         </db.connectionProviderClass>
+        <core.version>1.9.1</core.version>
+        <bridges.version>2.0.5</bridges.version>
     </properties>
 
     <build>
@@ -82,7 +84,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.core</groupId>
             <artifactId>intact-core</artifactId>
-            <version>1.9.0-SNAPSHOT</version>
+            <version>${core.version}</version>
         </dependency>
 
          <dependency>
@@ -112,7 +114,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.bridges.coredep</groupId>
             <artifactId>intact-cdb</artifactId>
-            <version>2.0.1</version>
+            <version>${bridges.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>cglib</groupId>
@@ -124,20 +126,20 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.bridges</groupId>
             <artifactId>intact-go</artifactId>
-            <version>2.0.2-SNAPSHOT</version>
+            <version>${bridges.version}</version>
         </dependency>
 
         <dependency>
             <groupId>uk.ac.ebi.intact.dbupdate</groupId>
             <artifactId>intact-proteins-update</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.1-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>cglib</groupId>
                     <artifactId>cglib-full</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency> 
+        </dependency>
 
 
         <!--Third party deps -->
