Using intact-core 1.9.x

--- a/repo/service/trunk/search/legacy/search-app/src/main/resources/log4j.properties
+++ b/repo/service/trunk/search/legacy/search-app/src/main/resources/log4j.properties
@@ -9,11 +9,11 @@ log4j.category.uk.ac.ebi.intact.config.impl.AbstractHibernateDataConfig=INFO
 log4j.category.uk.ac.ebi.intact.context.impl.WebappSession=INFO
 log4j.category.uk.ac.ebi.intact.context.IntactContext=INFO
 
-log4j.category.uk.ac.ebi.intact.webapp=DEBUG
+log4j.category.uk.ac.ebi.intact.webapp=INFO
 log4j.category.uk.ac.ebi.intact.webapp.search=INFO
-log4j.category.uk.ac.ebi.intact.webapp.search.SearchWebappContext=DEBUG
-log4j.category.uk.ac.ebi.intact.webapp.search.struts.controller.SearchActionBase=DEBUG
-log4j.category.uk.ac.ebi.intact.webapp.search.struts.controller.DispatcherAction=DEBUG
+log4j.category.uk.ac.ebi.intact.webapp.search.SearchWebappContext=INFO
+log4j.category.uk.ac.ebi.intact.webapp.search.struts.controller.SearchActionBase=INFO
+log4j.category.uk.ac.ebi.intact.webapp.search.struts.controller.DispatcherAction=INFO
 
 log4j.category.org.apache=INFO
 
