--- a/repo/service/tags/intact-view_before-sprints/pom.xml
+++ b/repo/service/tags/intact-view_before-sprints/pom.xml
@@ -47,6 +47,7 @@
         <google.analytics.tracker></google.analytics.tracker>
 
         <!-- Other intact apps -->
+        <intact.search.url>${appRoot}/search</intact.search.url>
         <intact.hierarchview.url>${appRoot}/hierarchView</intact.hierarchview.url>
 
         <!-- Das -->
