Created intact-ontologies, added to the root bridges pom

--- a/repo/bridges/trunk/pom.xml
+++ b/repo/bridges/trunk/pom.xml
@@ -37,7 +37,8 @@
        <module>intact-blast</module>
        <module>intact-go</module>
        <module>coredep</module>
-    </modules>
+    <module>intact-ontologies</module>
+  </modules>
 
 
     <build>
