Add commented listener: org.apache.myfaces.webapp.StartupServletContextListener

--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp-filtered/WEB-INF/web.xml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp-filtered/WEB-INF/web.xml
@@ -357,9 +357,9 @@
         <listener-class>uk.ac.ebi.intact.binarysearch.webapp.StartupListener</listener-class>
     </listener>
 
-    <!--<listener>-->
-        <!--<listener-class>org.apache.myfaces.webapp.StartupServletContextListener</listener-class>-->
-    <!--</listener>-->
+    <listener>
+        <listener-class>org.apache.myfaces.webapp.StartupServletContextListener</listener-class>
+    </listener>
 
     <!-- IntAct Startup-->
         <!--<listener>-->
