renamed the parameter giving access to the interaction index to intact.interactionIndex as it now it in the maven profile.

--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Search.properties
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Search.properties
@@ -14,8 +14,6 @@ search.parameter.class.value=
 # "local" to get data from LocalIndexDataService
 search.source.name=local
 
-
-
 # Here you can specify the path to the local index files
 # which you will need if you are using the LocalIndexDastService
-search.source.local.index.path=${binarysearch.defaultindex}
+search.source.local.index.path=${intact.interactionIndex}
