--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Struts.properties
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Struts.properties
@@ -57,7 +57,7 @@ error.method.required=A method is required
 
 # Used in FilterForm validation
 error.filter.score.bounded=For the filtering option a threshold value between 0 and 1 (max. 2 decimals) required
-error.filter.score.semantic=Values (0 + > and 1 + < ) do not make sence
+error.filter.score.semantic=Values (0 + > and 1 + < ) do not make sense
 error.filter.score.semantic.between=For the filtering option the first value has to be equal or less than the second one (min <= max)
 
 # Use in IntactBaseAction
