--- a/repo/service/branches/binary-search-webapp_before-trinidad/pom.xml
+++ b/repo/service/branches/binary-search-webapp_before-trinidad/pom.xml
@@ -136,14 +136,14 @@
                     <dependency>
                         <groupId>org.apache.myfaces.core</groupId>
                         <artifactId>myfaces-api</artifactId>
-                        <version>1.2.0-SNAPSHOT</version>
+                        <version>1.2.4</version>
                         <scope>compile</scope>
                     </dependency>
 
                     <dependency>
                         <groupId>org.apache.myfaces.core</groupId>
                         <artifactId>myfaces-impl</artifactId>
-                        <version>1.2.0-SNAPSHOT</version>
+                        <version>1.2.4</version>
                         <scope>compile</scope>
                     </dependency>
 
@@ -199,10 +199,11 @@
         </dependency>
 
         <dependency>
-            <groupId>psidev.psi.mi</groupId>
-            <artifactId>psimitab-search</artifactId>
-            <version>1.5.0-SNAPSHOT</version>
+            <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
+            <artifactId>intact-psimitab</artifactId>
+            <version>2.0.2-SNAPSHOT</version>
         </dependency>
+
         <dependency>
             <groupId>uk.ac.ebi.intact.commons</groupId>
             <artifactId>intact-commons</artifactId>
@@ -254,7 +255,7 @@
         <dependency>
             <groupId>com.sun.facelets</groupId>
             <artifactId>jsf-facelets</artifactId>
-            <version>1.1.14</version>
+            <version>1.1.15.B1</version>
         </dependency>
 
         <dependency>
