--- a/repo/service/trunk/psicquic-webservice/psicquic-commons/pom.xml
+++ b/repo/service/trunk/psicquic-webservice/psicquic-commons/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>psicquic-commons</artifactId>
-    <version>1.6.0-SMAPSHOT</version>
+    <version>1.6.0-SNAPSHOT</version>
 
     <name>IntAct Services :: PSICQUIC :: Commons</name>
 
