--- a/repo/service/trunk/commons/confidence-score-analyze-plugin/pom.xml
+++ b/repo/service/trunk/commons/confidence-score-analyze-plugin/pom.xml
@@ -11,9 +11,9 @@
     
     <artifactId>confidence-score-analyze-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <name>confidence-score-analyze-plugin</name>
-    <url>http://maven.apache.org</url>
+    <version>1.6.0-SNAPSHOT</version>
+
+    <name>IntAct Services :: Commons :: Confidence Score :: Plugin :: Analyze</name>
 
 
    <dependencies>
