--- a/repo/service/trunk/commons/confidence-score-fillDb-plugin/pom.xml
+++ b/repo/service/trunk/commons/confidence-score-fillDb-plugin/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>confidence-fillDb-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <version>1.6.0-SNAPSHOT</version>
-    <name>IntAct Services :: Commons :: Confidence :: Plugin :: FillDb Maven Plugin</name>
+    <name>IntAct Services :: Commons :: Confidence Score :: Plugin :: FillDb</name>
 
     <dependencies>
         <dependency>
