--- a/repo/service/trunk/commons/confidence-score-psimitab-maven-plugin/pom.xml
+++ b/repo/service/trunk/commons/confidence-score-psimitab-maven-plugin/pom.xml
@@ -13,7 +13,8 @@
     <artifactId>confidence-score-psimitab-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
    <version>1.6.0-SNAPSHOT</version>
-	<name>IntAct Services :: Commons :: Confidence :: Plugin :: PSIMITAB Maven Plugin</name>
+
+	<name>IntAct Services :: Commons :: Confidence Score :: Plugin :: PSIMITAB</name>
 
     <dependencies>
         <dependency>
