--- a/repo/service/trunk/commons/confidence-score-psimixml-maven-plugin/pom.xml
+++ b/repo/service/trunk/commons/confidence-score-psimixml-maven-plugin/pom.xml
@@ -13,7 +13,8 @@
     <artifactId>confidence-score-psimixml-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <version>1.6.0-SNAPSHOT</version>
-	<name>IntAct Services :: Commons :: Confidence :: Plugin :: PSIXML Maven Plugin</name>
+
+	<name>IntAct Services :: Commons :: Confidence Score :: Plugin :: PSIXML</name>
 
     <dependencies>
         <dependency>
